crates/notifications/src/snapshots/notifications__tests__missing_payment_method_resolved_free_trial_body.snap
---
source: crates/notifications/src/lib.rs
assertion_line: 803
expression: email.body
---
<!DOCTYPE html>
<html>
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
        body { margin: 0; padding: 0; font-family: Ubuntu, Helvetica, Arial, sans-serif; }
        .email-container { max-width: 600px; margin: 0 auto; }
        .email-content { padding: 20px; }
        .logo { text-align: center; padding: 20px 0; }
        .divider { border-top: 1px dashed grey; margin: 20px 0; }
        .dear-line { font-size: 20px; color: #512d0b; font-weight: bold; margin-bottom: 10px; }
        .body-text { font-size: 17px; line-height: 1.4; margin-bottom: 10px; }
        .signature { font-size: 14px; color: #000000; margin-top: 15px; }
        .identifier { background-color: #dadada; padding: 2px 3px; border-radius: 2px; font-family: monospace; font-weight: bold; }
        a { color: #5072EB; text-decoration: none; }
        .button {
            display: inline-block;
            background-color: #5072EB;
            color: white;
            padding: 12px 24px;
            border-radius: 4px;
            text-decoration: none;
            margin: 25px 0 0 0;
            font-weight: 400;
            font-size: 17px;
        }
        ul { margin: 10px 0; padding-left: 20px; }
        li { margin: 5px 0; }
    </style>
</head>
<body>
    <div class="email-container">
        <div class="logo">
            <img src="https://storage.googleapis.com/estuary-marketing-strapi-uploads/uploads//estuary_logo_comfy_14513ca434/estuary_logo_comfy_14513ca434.jpg" alt="Estuary Logo" style="max-width: 200px;">
        </div>
        <div class="divider"></div>
        <div class="email-content">
            <p class="body-text">We hope you are enjoying Estuary. We have received your payment method for your account <span class="identifier">acmeCo/</span>. After your free trial ends on <strong>2024-02-14</strong>, you will automatically be switched the paid tier.</p>
            <a href="https://dashboard.estuary.dev/admin/billing" class="button">📈 See your bill</a>
            
            <hr style="border: 0; border-top: 1px dashed lightgrey; margin: 40px 0 10px 0;">
            <p style="text-align: center; font-weight: bold; font-size: 22px; margin: 10px 0 20px 0;">Frequently Asked Questions</p>
            <hr style="border: 0; border-top: 1px dashed lightgrey; margin: 0 0 20px 0;">
            
            <div style="margin-top: 15px;">
                <p style="font-weight: bold; font-size: 19px; margin-bottom: 5px;">Where is my data stored?</p>
                <div style="border-left: 4px solid lightgrey; padding-left: 12px; margin-bottom: 15px;">
                    <p class="body-text" style="margin-bottom: 0;">By default, all collection data is stored in an Estuary-owned cloud storage bucket with a 20 day retention policy. If you haven't already, now is a great time to update your <a href="https://docs.estuary.dev/getting-started/installation/">storage mappings</a> to use your own cloud storage bucket. We support GCS, S3, and Azure Blob storage.</p>
                </div>
            </div>
            
            <div style="margin-top: 15px;">
                <p style="font-weight: bold; font-size: 19px; margin-bottom: 5px;">How can I access Estuary Support?</p>
                <div style="border-left: 4px solid lightgrey; padding-left: 12px; margin-bottom: 15px;">
                    <p class="body-text" style="margin-bottom: 0;">Reach out to support@estuary.dev or join our slack.</p>
                </div>
            </div>
            
            <div style="margin-top: 15px;">
                <p style="font-weight: bold; font-size: 19px; margin-bottom: 5px;">Is it possible to schedule data flows?</p>
                <div style="border-left: 4px solid lightgrey; padding-left: 12px; margin-bottom: 15px;">
                    <p class="body-text" style="margin-bottom: 0;">Estuary moves most data in real-time by default, without the need for scheduling, but you can add "update delays" to data warehouses to enable more downtime on your warehouse for cost savings. This can be enabled under "advanced settings" and default settings are 30 minutes for a warehouse.</p>
                </div>
            </div>            <div class="signature">
                Thanks,<br>
                Estuary Team
            </div>
        </div>
    </div>
</body>
</html>
