crates/notifications/src/snapshots/notifications__tests__task_chronically_failing_fired_body.snap
---
source: crates/notifications/src/lib.rs
assertion_line: 975
expression: email.body
---
<!DOCTYPE html>
<html>
<head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
        body { margin: 0; padding: 0; font-family: Ubuntu, Helvetica, Arial, sans-serif; }
        .email-container { max-width: 600px; margin: 0 auto; }
        .email-content { padding: 20px; }
        .logo { text-align: center; padding: 20px 0; }
        .divider { border-top: 1px dashed grey; margin: 20px 0; }
        .dear-line { font-size: 20px; color: #512d0b; font-weight: bold; margin-bottom: 10px; }
        .body-text { font-size: 17px; line-height: 1.4; margin-bottom: 10px; }
        .signature { font-size: 14px; color: #000000; margin-top: 15px; }
        .identifier { background-color: #dadada; padding: 2px 3px; border-radius: 2px; font-family: monospace; font-weight: bold; }
        a { color: #5072EB; text-decoration: none; }
        .button {
            display: inline-block;
            background-color: #5072EB;
            color: white;
            padding: 12px 24px;
            border-radius: 4px;
            text-decoration: none;
            margin: 25px 0 0 0;
            font-weight: 400;
            font-size: 17px;
        }
        ul { margin: 10px 0; padding-left: 20px; }
        li { margin: 5px 0; }
    </style>
</head>
<body>
    <div class="email-container">
        <div class="logo">
            <img src="https://storage.googleapis.com/estuary-marketing-strapi-uploads/uploads//estuary_logo_comfy_14513ca434/estuary_logo_comfy_14513ca434.jpg" alt="Estuary Logo" style="max-width: 200px;">
        </div>
        <div class="divider"></div>
        <div class="email-content">
            <p class="body-text">
                Your Estuary capture <span class="identifier">acmeCo/test/capture</span> has been failing since 2025-05-01. We have attempted to restart it 42 time(s) without success.
            </p>
            <p class="body-text">
                If the task is still important to you, please check its configuration and logs for issues preventing it from running successfully. Otherwise, it will be disabled automatically on 2025-06-08.
            </p>
            <ul>
                <li><a href="http://dashboard.estuary.test/captures/details/overview?catalogName=acmeCo/test/capture" target="_blank" rel="noopener">View the task status and logs</a></li>
                <li>If you need help, reach out to our team via <a href="https://go.estuary.dev/slack">Slack</a> (#support) or reply to this email</li>
            </ul>            <div class="signature">
                Thanks,<br>
                Estuary Team
            </div>
        </div>
    </div>
</body>
</html>
